--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "@fortawesome/fontawesome-free": "^6.3.0",
     "bootstrap": "^5.2.3",
+    "form-group": "^3.0.8",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
